--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "json-schema-flatten",
-  "version": "0.9.3",
+  "version": "0.10.0",
   "description": "Flatten a JSON schemas with internal references.",
   "main": "es5/index.js",
   "scripts": {
@@ -10,12 +10,14 @@
   },
   "author": "dieter@moeriki.com",
   "license": "ISC",
+  "repository": "git@github.com:Moeriki/json-schema-flatten.git",
   "dependencies": {
-    "clone-deep": "^0.2.3",
-    "for-each-deep": "^0.9.1"
+    "capitalize": "^1.0.0",
+    "clone-deep": "^0.2.3"
   },
   "devDependencies": {
     "babel-cli": "^6.3.15",
+    "babel-eslint": "^5.0.0-beta4",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.3.13",
     "chai": "^3.4.1",
