--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "clone-deep": "^0.2.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.3.15",
+    "babel-cli": "^6.3.17",
     "babel-eslint": "^5.0.0-beta4",
+    "babel-plugin-add-module-exports": "^0.1.2",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.3.13",
