--- a/tsconfig.mjs.json
+++ b/tsconfig.mjs.json
@@ -2,6 +2,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "composite": true,
-    "outDir": "dist/commonjs"
+    "target": "es5",
+    "lib": ["esnext"],
+    "outDir": "dist/mjs"
   }
 }
